--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -54,38 +54,44 @@ jobs:
           echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
           echo "SEASON=$SEASON" >> $GITHUB_ENV
 
-          # Calculate last season
-          LAST_SEASON=$((SEASON - 1))
-          echo "LAST_SEASON=$LAST_SEASON" >> $GITHUB_ENV
-
-      - name: Fetch current season standings
+      - name: Fetch Standings and Last Season Info
         run: |
-          echo "📥 Fetching current season standings for league $LEAGUE_ID, season $SEASON"
-          curl -s --request GET \
+          echo "📥 Fetching current season standings..."
+          CURRENT=$(curl -s --request GET \
             --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&league=${LEAGUE_ID}" \
             --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com" > tmp/current-standings.json
+            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
-      - name: Fetch last season standings
-        run: |
-          echo "📥 Fetching last season standings for league $LEAGUE_ID, season $LAST_SEASON"
-          curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${LAST_SEASON}&league=${LEAGUE_ID}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com" > tmp/last-season-standings.json
+          echo "$CURRENT" | jq . > tmp/current-standings.json
 
-      - name: Merge current standings with last season info
-        run: |
-          echo "🔄 Merging current standings with last season data..."
-          jq --slurpfile lastSeason tmp/last-season-standings.json '
+          LAST_SEASON=$((SEASON - 1))
+          echo "{}" > tmp/last-season-map.json
+
+          echo "🔄 Getting last season info for all teams..."
+          for TEAM_ID in $(jq -r '.response[0].league.standings[0][] | .team.id' tmp/current-standings.json); do
+            echo "Fetching last season info for team $TEAM_ID..."
+            TEAM_RESPONSE=$(curl -s --request GET \
+              --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${LAST_SEASON}&team=${TEAM_ID}" \
+              --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
+              --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
+
+            LAST_LEAGUE=$(echo "$TEAM_RESPONSE" | jq -r '.response[0].league.name // "Unknown"')
+            LAST_RANK=$(echo "$TEAM_RESPONSE" | jq -r '.response[0].league.standings[0][0].rank // "?"')
+
+            jq --arg id "$TEAM_ID" \
+               --arg league "$LAST_LEAGUE" \
+               --arg rank "$LAST_RANK" \
+               '. + {($id): {lastLeague: $league, lastRank: $rank}}' \
+               tmp/last-season-map.json > tmp/tmp-last.json && mv tmp/tmp-last.json tmp/last-season-map.json
+          done
+
+          echo "🛠️ Merging data..."
+          jq --slurpfile last tmp/last-season-map.json '
             .response[0].league.standings[0] |= map(
-              . as $team |
-              ($lastSeason[0].response[0].league.standings[0][] | select(.team.id == $team.team.id)) as $lastTeam |
-
               . + {
-                highlight: (.team.id == 43),
-                lastSeasonLeague: ($lastSeason[0].response[0].league.name // "Unknown"),
-                lastSeasonPosition: ($lastTeam.rank // "?")
+                highlight: (if .team.id == 43 then true else false end),
+                lastSeasonLeague: ($last[0][(.team.id|tostring)].lastLeague // "Unknown"),
+                lastSeasonPosition: ($last[0][(.team.id|tostring)].lastRank // "?")
               }
             )
           ' tmp/current-standings.json > data/standings.json
@@ -108,26 +114,14 @@ jobs:
         run: |
           curl -s -o league-icon.png "https://media.api-sports.io/football/leagues/${LEAGUE_ID}.png"
 
-      - name: Add and commit league icon
+      - name: Commit and Push
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add league-icon.png
-          if git diff --cached --quiet; then
-            echo "No changes in league icon."
-          else
-            git commit -m "Update league icon for league ${LEAGUE_ID}"
-            git push
-          fi
-
-      - name: Commit and Push if Changed
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add data/standings.json tmp/cardiff-response.json assets/logos/
+          git add data/standings.json tmp/cardiff-response.json assets/logos/ league-icon.png
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update standings and team icons"
+            git commit -m "Update standings with extended info"
             git push
           fi
