--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -89,6 +89,7 @@ jobs:
             .response[0].league.standings[0] |= map(
               . + {
                 highlight: (if .team.id == 43 then true else false end),
+                lastSeasonLeague: ($last[0][(.team.id|tostring)].lastLeague // "Unknown"),
                 lastSeasonPosition: ($last[0][(.team.id|tostring)].lastRank // "?")
               }
             )
