--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -77,8 +77,11 @@ jobs:
               --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
               --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
-            echo "$RESPONSE" | jq -c '.response[0].league.standings[0][] | {(.team.id|tostring): {lastRank: .rank}}' |
-            jq -s 'add' > tmp/league-${LID}-map.json
+            LEAGUE_NAME=$(echo "$RESPONSE" | jq -r '.response[0].league.name')
+            echo "$RESPONSE" | jq -c --arg lname "$LEAGUE_NAME" '
+              .response[0].league.standings[0][] |
+              { (.team.id|tostring): { lastRank: .rank, lastLeague: $lname } }
+            ' | jq -s 'add' > tmp/league-${LID}-map.json
           done
 
           echo "Merging previous season rank info..."
