--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -2,11 +2,11 @@ name: Update Cardiff Standings
 
 on:
   workflow_dispatch:
-  # schedule:
-    # - cron: '45 19 * * 1-5'
-    # - cron: '*/15 20-23 * * 1-5'
-    # - cron: '*/15 12-23 * * 6,0'
-    # - cron: '0 0 * * *'
+  #schedule:
+    #- cron: '45 19 * * 1-5'
+    #- cron: '*/15 20-23 * * 1-5'
+    #- cron: '*/15 12-23 * * 6,0'
+    #- cron: '0 0 * * *'
 
 permissions:
   contents: write
@@ -42,6 +42,7 @@ jobs:
           echo "$response" | jq . > tmp/cardiff-response.json
 
           LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
+          LEAGUE_NAME=$(echo "$response" | jq -r '.response[0].league.name')
 
           if [ "$LEAGUE_ID" = "null" ] || [ -z "$LEAGUE_ID" ]; then
             echo "❌ Could not determine league ID. Exiting."
@@ -49,11 +50,11 @@ jobs:
             exit 1
           fi
 
-          echo "✅ Detected League ID: $LEAGUE_ID"
+          echo "✅ Cardiff are in $LEAGUE_NAME (League ID $LEAGUE_ID) for $SEASON"
           echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
           echo "SEASON=$SEASON" >> $GITHUB_ENV
 
-      - name: Fetch Standings + Previous Season Placement (Efficient)
+      - name: Fetch Standings and Last Season Info
         run: |
           echo "📥 Fetching current season standings..."
           CURRENT=$(curl -s --request GET \
@@ -63,31 +64,28 @@ jobs:
 
           echo "$CURRENT" | jq . > tmp/current-standings.json
 
-          echo "🔁 Getting last season standings from leagues above and below..."
           LAST_SEASON=$((SEASON - 1))
-          ABOVE=$((LEAGUE_ID - 1))
-          BELOW=$((LEAGUE_ID + 1))
-
           echo "{}" > tmp/last-season-map.json
 
-          for LID in $LEAGUE_ID $ABOVE $BELOW; do
-            echo "Fetching last season standings for league $LID"
-            RESPONSE=$(curl -s --request GET \
-              --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${LAST_SEASON}&league=${LID}" \
+          echo "🔄 Getting last season info for all teams..."
+          for TEAM_ID in $(jq -r '.response[0].league.standings[0][] | .team.id' tmp/current-standings.json); do
+            echo "Fetching last season info for team $TEAM_ID..."
+            TEAM_RESPONSE=$(curl -s --request GET \
+              --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${LAST_SEASON}&team=${TEAM_ID}" \
               --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
               --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
 
-            LEAGUE_NAME=$(echo "$RESPONSE" | jq -r '.response[0].league.name')
-            echo "$RESPONSE" | jq -c --arg lname "$LEAGUE_NAME" '
-              .response[0].league.standings[0][] |
-              { (.team.id|tostring): { lastRank: .rank, lastLeague: $lname } }
-            ' | jq -s 'add' > tmp/league-${LID}-map.json
+            LAST_LEAGUE=$(echo "$TEAM_RESPONSE" | jq -r '.response[0].league.name // "Unknown"')
+            LAST_RANK=$(echo "$TEAM_RESPONSE" | jq -r '.response[0].league.standings[0][0].rank // "?"')
+
+            jq --arg id "$TEAM_ID" \
+               --arg league "$LAST_LEAGUE" \
+               --arg rank "$LAST_RANK" \
+               '. + {($id): {lastLeague: $league, lastRank: $rank}}' \
+               tmp/last-season-map.json > tmp/tmp-last.json && mv tmp/tmp-last.json tmp/last-season-map.json
           done
 
-          echo "Merging previous season rank info..."
-          jq -s '.[0] * .[1] * .[2]' tmp/league-*.json > tmp/last-season-map.json
-
-          echo "🛠️ Adding extra data to standings..."
+          echo "🛠️ Merging data..."
           jq --slurpfile last tmp/last-season-map.json '
             .response[0].league.standings[0] |= map(
               . + {
@@ -97,19 +95,6 @@ jobs:
               }
             )
           ' tmp/current-standings.json > data/standings.json
-
-      - name: Get Next Fixtures for League
-        run: |
-          echo "📅 Fetching upcoming fixtures..."
-          START_DATE=$(date -d "+0 days" +%Y-%m-%d)
-          END_DATE=$(date -d "+5 days" +%Y-%m-%d)
-
-          FIXTURES=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/fixtures?league=${LEAGUE_ID}&season=${SEASON}&from=${START_DATE}&to=${END_DATE}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
-
-          echo "$FIXTURES" | jq . > data/standings.json
 
       - name: Clean old logos
         run: |
@@ -137,6 +122,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update standings with previous rank + next fixture"
+            git commit -m "Update standings with extended info"
             git push
           fi
