--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -2,56 +2,32 @@ name: Update Cardiff Standings
 
 on:
   workflow_dispatch:
+  # You can re-enable this if you want it scheduled too
   # schedule:
-    # - cron: '45 19 * * 1-5'
-    # - cron: '*/15 20-23 * * 1-5'
-    # - cron: '*/15 12-23 * * 6,0'
-    # - cron: '0 0 * * *'
-    
+  #   - cron: '45 19 * * 1-5'
+  #   - cron: '*/15 20-23 * * 1-5'
+  #   - cron: '*/15 12-23 * * 6,0'
+  #   - cron: '0 0 * * *'
+
 permissions:
   contents: write
 
 jobs:
   update:
     runs-on: ubuntu-latest
+    needs: detect-league  # 👈 depends on the detect workflow
+    env:
+      LEAGUE_ID: ${{ needs.detect-league.outputs.league_id }}
+      SEASON: ${{ needs.detect-league.outputs.season }}
 
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Detect Cardiff’s League and Season
+      - name: Debug Inputs
         run: |
-          TEAM_ID=43
-          MONTH=$(date +%m)
-          YEAR=$(date +%Y)
-
-          if [ "$MONTH" -lt 8 ]; then
-            SEASON=$((YEAR - 1))
-          else
-            SEASON=$YEAR
-          fi
-
-          echo "📅 Using season: $SEASON"
-          mkdir -p tmp
-
-          response=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&team=${TEAM_ID}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
-
-          echo "$response" | jq . > tmp/cardiff-response.json
-
-          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
-
-          if [ "$LEAGUE_ID" = "null" ] || [ -z "$LEAGUE_ID" ]; then
-            echo "❌ Could not determine league ID. Exiting."
-            cat tmp/cardiff-response.json
-            exit 1
-          fi
-
-          echo "✅ Detected League ID: $LEAGUE_ID"
-          echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
-          echo "SEASON=$SEASON" >> $GITHUB_ENV
+          echo "🕵️ League ID: $LEAGUE_ID"
+          echo "🗓️ Season: $SEASON"
 
       - name: Fetch Standings + Previous Season Placement (Efficient)
         run: |
@@ -154,10 +130,9 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add data/standings.json tmp/cardiff-response.json assets/logos/ league-icon.png
+          git add data/standings.json tmp/current-standings.json tmp/fixtures.json assets/logos/ league-icon.png
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
             git commit -m "Update standings with last season league, rank, and next fixture"
             git push
-          fi
