--- a/.github/workflows/update-standings.yml
+++ b/.github/workflows/update-standings.yml
@@ -7,7 +7,7 @@ on:
     # - cron: '*/15 20-23 * * 1-5'
     # - cron: '*/15 12-23 * * 6,0'
     # - cron: '0 0 * * *'
-    
+
 permissions:
   contents: write
 
@@ -19,41 +19,24 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Detect Cardiff’s League and Season
+      - name: Load league and season info
+        id: load
         run: |
-          TEAM_ID=43
-          MONTH=$(date +%m)
-          YEAR=$(date +%Y)
+          echo "📦 Reading cached league info..."
+          cat data/league-info.json
 
-          if [ "$MONTH" -lt 8 ]; then
-            SEASON=$((YEAR - 1))
-          else
-            SEASON=$YEAR
-          fi
+          LEAGUE_ID=$(jq -r '.league_id' data/league-info.json)
+          SEASON=$(jq -r '.season' data/league-info.json)
+          LAST_SEASON=$((SEASON - 1))
 
-          echo "📅 Using season: $SEASON"
-          mkdir -p tmp
+          echo "✅ League ID: $LEAGUE_ID"
+          echo "✅ Season: $SEASON"
 
-          response=$(curl -s --request GET \
-            --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${SEASON}&team=${TEAM_ID}" \
-            --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-            --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
-
-          echo "$response" | jq . > tmp/cardiff-response.json
-
-          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
-
-          if [ "$LEAGUE_ID" = "null" ] || [ -z "$LEAGUE_ID" ]; then
-            echo "❌ Could not determine league ID. Exiting."
-            cat tmp/cardiff-response.json
-            exit 1
-          fi
-
-          echo "✅ Detected League ID: $LEAGUE_ID"
           echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
           echo "SEASON=$SEASON" >> $GITHUB_ENV
+          echo "LAST_SEASON=$LAST_SEASON" >> $GITHUB_ENV
 
-      - name: Fetch Standings + Previous Season Placement (Efficient)
+      - name: Fetch Current Standings
         run: |
           echo "📥 Fetching current season standings..."
           CURRENT=$(curl -s --request GET \
@@ -63,30 +46,13 @@ jobs:
 
           echo "$CURRENT" | jq . > tmp/current-standings.json
 
-          echo "🔁 Getting last season standings from leagues above and below..."
-          LAST_SEASON=$((SEASON - 1))
-          ABOVE=$((LEAGUE_ID - 1))
-          BELOW=$((LEAGUE_ID + 1))
+      - name: Build Previous Season Map
+        run: |
+          echo "📑 Building previous season map from cache..."
+          mkdir -p tmp
 
-          echo "{}" > tmp/last-season-map.json
-
-          for LID in $LEAGUE_ID $ABOVE $BELOW; do
-            echo "Fetching last season standings for league $LID"
-            RESPONSE=$(curl -s --request GET \
-              --url "https://api-football-v1.p.rapidapi.com/v3/standings?season=${LAST_SEASON}&league=${LID}" \
-              --header "X-RapidAPI-Key: ${{ secrets.RAPIDAPI_KEY }}" \
-              --header "X-RapidAPI-Host: api-football-v1.p.rapidapi.com")
-
-            LEAGUE_NAME=$(echo "$RESPONSE" | jq -r '.response[0].league.name')
-
-            echo "$RESPONSE" | jq -c --arg lname "$LEAGUE_NAME" '
-              .response[0].league.standings[0][] |
-              { (.team.id|tostring): { lastRank: .rank, lastLeague: $lname } }
-            ' | jq -s 'add' > tmp/league-${LID}-map.json
-          done
-
-          echo "Merging previous season rank info..."
-          jq -s '.[0] * .[1] * .[2]' tmp/league-*.json > tmp/last-season-map.json
+          jq -s '.[0] * .[1] * .[2]' \
+            data/previous-season/league-*.json > tmp/last-season-map.json
 
       - name: Fetch Upcoming Fixtures
         run: |
@@ -101,7 +67,6 @@ jobs:
 
           echo "$FIXTURES" | jq . > tmp/fixtures.json
 
-          # Build a map of next opponent per team
           jq -r '
             .response[] |
             select(.teams.home.id and .teams.away.id) |
@@ -154,10 +119,10 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add data/standings.json tmp/cardiff-response.json assets/logos/ league-icon.png
+          git add data/standings.json tmp/current-standings.json assets/logos/ league-icon.png
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update standings with last season league, rank, and next fixture"
+            git commit -m "Update standings with cached league info and previous season stats"
             git push
           fi
